# csf-optimization

./: .gitignore  CMakeLists.txt  README.md  setup.py
CSFDemo/: CSFDemo.cpp  params.cfg
configs/: csf_optimization.yaml
doc/: CSF优化实验记录.md  CSF性能瓶颈与核心代码分析报告.md  CSF算法流程分析报告.md  CSF项目新线程交接文档.md  GitHub上传与服务器同步流程.md  overnight_sweep脚本说明.md
learn/: 0-1-OpenMP.md
python/CSF/: CSF.i  CSF.py  CSF_wrap.cxx
python/tests/: csf_test.py
src/: CMakeLists.txt  CSF.cpp  CSF.h  Cloth.cpp  Cloth.h  ClothSoA.cpp  ClothSoA.h  Constraint.cpp  Particle.cpp  Rasterization.cpp  Rasterization.h  RasterizationSoA.cpp  RasterizationSoA.h  Vec3.h  XYZReader.cpp  c2cdist.cpp  c2cdistSoA.cpp  c2cdistSoA.h  point_cloud.h
src/cuda/: ClothCuda.cu  ClothCuda.cuh  CudaReduction.cu  CudaUtils.cuh
tools/: run_las_baseline.py  run_optimization_sweep.py
数据分析/sweep_20260517_0334/: sweep_manifest.json  sweep_summary.csv  sweep_summary.json  sweep_summary.md
